--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -57,8 +57,8 @@ development_status:
   2-3-wallet-connection-signature: review
   2-4-webhook-url-generation: review
   2-5-extended-adapter-connection: done
-  2-6-extended-adapter-order-execution: backlog
-  2-7-retry-logic-with-exponential-backoff: backlog
+  2-6-extended-adapter-order-execution: done
+  2-7-retry-logic-with-exponential-backoff: review
   2-8-execution-logging-partial-fills: backlog
   2-9-signal-processor-fan-out: backlog
   2-10-wallet-disconnect-revocation: backlog
