--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -45,7 +45,7 @@ development_status:
   1-1-project-initialization: done
   1-2-database-foundation: review
   1-3-webhook-endpoint-with-authentication: done
-  1-4-signal-payload-parsing-validation: review
+  1-4-signal-payload-parsing-validation: done
   1-5-signal-deduplication: review
   1-6-rate-limiting: review
   epic-1-retrospective: optional
