--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -46,7 +46,7 @@ development_status:
   1-2-database-foundation: review
   1-3-webhook-endpoint-with-authentication: done
   1-4-signal-payload-parsing-validation: done
-  1-5-signal-deduplication: review
+  1-5-signal-deduplication: done
   1-6-rate-limiting: review
   epic-1-retrospective: optional
 
