--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -55,7 +55,7 @@ development_status:
   2-1-dex-adapter-interface: done
   2-2-user-session-management: done
   2-3-wallet-connection-signature: done
-  2-4-webhook-url-generation: review
+  2-4-webhook-url-generation: done
   2-5-extended-adapter-connection: done
   2-6-extended-adapter-order-execution: done
   2-7-retry-logic-with-exponential-backoff: review
